Minor changes to get file:wsdl/hello_world.wsdl relative URL's to work. Fix eclipse warning
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@501597 13f79535-47bb-0310-9956-ffa450edef68